--- a/app/src/pages/Aluno/static/NotasAluno.css
+++ b/app/src/pages/Aluno/static/NotasAluno.css
@@ -22,19 +22,21 @@ h1 {
 .notas-write {
     font-size: 45px;
     font-weight: bold;
-    margin-right: 165px;
+    margin-right: 155px;
 }
 
 .notas-list {
     display: table;
     width: 100%;
     margin-top: 20px;
+    background-color: #e8dddc;
+    border: 5px solid black;
 }
 
 .avaliacao-nota {
     display: table-row;
     width: 100%;
-    border:5px solid black;
+    background-color: #e8dddc;
 }
 
 .avaliacao, .nota {
