--- a/app/src/pages/static/Header.css
+++ b/app/src/pages/static/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f2f2f2;
+  background-color: white;
   color: white;
   padding: 10px 20px;
   width: 100%;
