--- a/app/src/pages/static/Login.css
+++ b/app/src/pages/static/Login.css
@@ -1,64 +1,62 @@
 .login-container {
   display: flex;
-  justify-content:center;
-  align-items:center;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
   background-color: #ffffff;
-  /* border: 5px solid blue; */
-  padding: 20px;
+  padding: 2%;
 }
 
 .logo-container-login {
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 5px solid red; */
-  flex: 1; /* Flexibiliza o tamanho da logo-container */
-  /* margin-right: 180px; Espaçamento entre as divs */
-}
-.logo-login {
-  width: 500px;                     /* Defina a largura da logo */
-  height: 250px; 
-}
-.line-separator {
-  border-left: 2px solid gray;      /* Linha vertical */
-  height: 600px;                    /* Altura da linha, ajuste conforme necessário */ 
-  margin-right:200px;               /* Espaçamento ao redor da linha */
-}
-.login-wrapper {
-  background-color: #f6f6f6;
-  border-radius: 10px;
-  padding: 120px;
-  margin-right:50px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 400px; /* Define a largura máxima da área de login */
-  /* border: 5px solid orange; */
-  border: 1px solid black;
+  flex: 1;
+  margin-right: 5%;
 }
 
-  .login-text h1 {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-    color: #333;
-    text-align: center;
-    margin-bottom: 20px;
-  
-  }
-  
-  .login-button {
-    text-align: center;
-  }
-  
-  #login-text {
-    font-size: 2rem;
-    color: #333;
-  }
-  
-  .MuiTextField-root {
-    margin-bottom: 20px;
-  }
-  
-  .Alert {
-    margin-top: 20px;
-  }
-  
+.logo-login {
+  width: 80%; /* Largura da logo ajustada para ser responsiva */
+  height: auto;
+}
+
+.line-separator {
+  border-left: 0.2vw solid gray;
+  height: 60vh; /* Altura ajustada para viewport height */
+  margin-right: 15%;
+}
+
+.login-wrapper {
+  background-color: #f6f6f6;
+  border-radius: 1%;
+  padding: 5%;
+  margin-right: 2%;
+  box-shadow: 0 0.4vw 0.8vw rgba(0, 0, 0, 0.1);
+  max-width: 90%; /* Largura máxima da área de login */
+  border: 0.1vw solid black;
+}
+
+.login-text h1 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  color: #333;
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+.login-button {
+  text-align: center;
+}
+
+#login-text {
+  font-size: 2vw; /* Tamanho responsivo para a fonte */
+  color: #333;
+}
+
+.MuiTextField-root {
+  margin-bottom: 5%;
+}
+
+.Alert {
+  margin-top: 5%;
+}
